--- a/config.json
+++ b/config.json
@@ -1,10 +1,19 @@
 {
+  "logging": {
+    "level": "DEBUG",
+    "dir": ".",
+    "file_name": "app.log"
+  },
   "server": {
     "host": "localhost",
     "port": 8000
   },
   "ui": {
-    "directory": "ui"
+    "autostart": true,
+    "directory": "ui",
+    "host": "localhost",
+    "port": 8080,
+    "theme": "dark"
   },
   "services": {
     "translate": {
@@ -69,6 +78,10 @@
           "label": "Image Height",
           "options": [
             {
+              "value": 256,
+              "label": "256px"
+            },
+            {
               "value": 512,
               "label": "512px"
             },
@@ -87,6 +100,10 @@
           "type": "select",
           "label": "Image Width",
           "options": [
+            {
+              "value": 256,
+              "label": "256px"
+            },
             {
               "value": 512,
               "label": "512px"
@@ -137,9 +154,18 @@
           "type": "select",
           "label": "Max Length",
           "options": [
-            {"value": 50, "label": "Short (50 tokens)"},
-            {"value": 100, "label": "Medium (100 tokens)"},
-            {"value": 200, "label": "Long (200 tokens)"}
+            {
+              "value": 50,
+              "label": "Short (50 tokens)"
+            },
+            {
+              "value": 100,
+              "label": "Medium (100 tokens)"
+            },
+            {
+              "value": 200,
+              "label": "Long (200 tokens)"
+            }
           ]
         },
         {
